# zk-benchmarks

./: .gitignore  .gitmodules  LICENSE.md  README.md
base-image/: Dockerfile  README.md  run.sh
base-image/ptau/: README.md
ceremony/: .gitignore  README.md  setup.sh
framework/: README.md
framework/src/: Collect.hs  Parser.hs  Runner.hs  Types.hs  tmp.hs
hash/: README.md
hash/cpu/: README.md
hash/cpu/bench/Blake3/Unix/: .gitignore  bench.cfg  build.sh  fakedata.c  run.sh
hash/cpu/bench/Poseidon2/Zikkurat/: bench.cfg  build.sh  poseidon2.c  run.sh
hash/cpu/bench/SHA256/C/: .gitignore  bench.cfg  bench_linear  bench_linear.c  bench_merkle  bench_merkle.c  build.sh  run.sh  setup.sh
hash/cpu/bench/SHA256/Unix/: bench.cfg  build.sh  fakedata.c  run.sh
hash/cpu/src/: README.md
hash/jolt/bench/: Cargo.toml  README.md  bench.cfg  bench_tree.cfg  run.sh  run_tree.sh
hash/jolt/bench/guest/: Cargo.toml
hash/jolt/bench/guest/src/: lib.rs  poseidon2_bn256.rs
hash/jolt/bench/src/: main.rs
hash/jolt/bench/src/benches/: blake2.rs  blake3.rs  mod.rs  poseidon2_babybear.rs  poseidon2_bn256.rs  sha2.rs  sha3.rs
hash/plonky2/: Cargo.toml
hash/plonky2/bench/: Cargo.toml  README.md  bench.cfg  bench_tree.cfg  build.sh  run.sh  run_tree.sh
hash/plonky2/bench/src/: main.rs
hash/plonky2/bench/src/arithmetic/: binary_arithmetic.rs  u32_arithmetic.rs  u64_arithmetic.rs
hash/plonky2/bench/src/bench/: poseidon.rs
hash/plonky2/bench/src/bench/keccak256/: keccak.rs  keccak_polygon.rs
hash/plonky2/bench/src/bench/sha256/: sha.rs  sigma.rs  xor3.rs
hash/plonky2/src/: main.rs
hash/plonky2/src/arithmetic/: binary_arithmetic.rs  u32_arithmetic.rs  u64_arithmetic.rs
hash/plonky2/src/bench/: keccak.rs  poseidon.rs
hash/plonky2/src/bench/keccak256/: chi.rs  iota.rs  keccak.rs  pi.rs  rho.rs  theta.rs
hash/plonky2/src/bench/sha256/: ch.rs  constants.rs  maj.rs  rotate.rs  sha.rs  shift.rs  sigma.rs
hash/risc0/: README.md
hash/risc0/bench/: Cargo.toml  README.md  bench.cfg  bench_tree.cfg  build.sh  run.sh  run_tree.sh
hash/risc0/bench/host/: Cargo.toml
hash/risc0/bench/host/benches/: bench_main.rs  sha256_benchmarks.rs
hash/risc0/bench/host/benches/benchmarks/: mod.rs  sha256_benchmarks.rs
hash/risc0/bench/host/src/: lib.rs  main.rs
hash/risc0/bench/methods/: Cargo.toml
hash/risc0/bench/methods/guest/: Cargo.toml
hash/risc0/bench/methods/guest/src/: main.rs
hash/risc0/bench/src/: main.rs
hash/risc0/bench/src/benches/: blake2b.rs  blake3.rs  keccak.rs  mod.rs  poseidon2_babybear.rs  poseidon2_babybear_native.rs  poseidon2_bn128.rs  sha256.rs  sha256_accelerated.rs
hash/risc0/composition/: Cargo.toml  run.sh
hash/risc0/composition/methods/: Cargo.toml
hash/risc0/composition/methods/guest/: Cargo.toml
hash/risc0/composition/methods/guest/src/: main.rs
hash/risc0/composition/src/: main.rs
hash/risc0/inner_proof/: Cargo.toml
hash/risc0/inner_proof/methods/: Cargo.toml
hash/risc0/inner_proof/methods/guest/: Cargo.toml
hash/risc0/inner_proof/methods/guest/src/: main.rs
hash/risc0/inner_proof/src/: lib.rs  main.rs
hash/snark/: README.md
hash/snark/bench/Poseidon2/: bench.cfg  build.sh  generate_input.c  hash.circom.template  hash_sponge.circom.template  run.sh  setup.sh  witness.sh
hash/sp1/bench/: README.md  bench.cfg  bench_tree.cfg  build.sh  run.sh  run_tree.sh
hash/sp1/bench/blake2/: Cargo.toml
hash/sp1/bench/blake2/elf/: riscv32im-succinct-zkvm-elf
hash/sp1/bench/blake2/src/: main.rs
hash/sp1/bench/blake3/: Cargo.toml
hash/sp1/bench/blake3/elf/: riscv32im-succinct-zkvm-elf
hash/sp1/bench/blake3/src/: main.rs
hash/sp1/bench/keccak/: Cargo.toml
hash/sp1/bench/keccak/elf/: riscv32im-succinct-zkvm-elf
hash/sp1/bench/keccak/src/: main.rs
hash/sp1/bench/poseidon2/: Cargo.toml
hash/sp1/bench/poseidon2/elf/: riscv32im-succinct-zkvm-elf
hash/sp1/bench/poseidon2/src/: main.rs
hash/sp1/bench/script/: Cargo.toml
hash/sp1/bench/script/src/: main.rs
hash/sp1/bench/script/src/benches/: blake2.rs  blake3.rs  keccak.rs  poseidon2.rs  sha256.rs
hash/sp1/bench/sha256/: Cargo.toml
hash/sp1/bench/sha256/elf/: riscv32im-succinct-zkvm-elf
hash/sp1/bench/sha256/src/: main.rs
