[package]
name = "plonky2_hash_benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# TODO: This can be later changed to original github
plonky2_u32 ={ git = "https://github.com/man2706kum/plonky2-u32.git"}
plonky2 = "0.2.2"
rand = "0.8.3"
anyhow = "1.0.79"
sha2 = "0.10"
tiny-keccak={version="2.0.2", features=["keccak"]}
hex="0.4.3"



