[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["methods"]

[workspace.dependencies]
methods = { path = "methods" }

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3

[dependencies]
risc0-zkvm = { version = "0.19.0" }
serde = "1.0"
rand = "0.8.3"
methods = { workspace = true }