[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["methods"]

[workspace.dependencies]
methods = { path = "methods" }

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3

[dependencies]
risc0-zkvm = { version = "0.19.0" }
serde = "1.0"
rand = "0.8.3"
sha2 ={ git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0" }
methods = { workspace = true }
zkhash = { git = "https://github.com/HorizenLabs/poseidon2.git"}
ark-ff = "0.4.2"
hex = "0.4.3"
ark-serialize = "0.4"