[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { path = "../external/risc0/risc0/zkvm" }
serde = "1.0"
rand = "0.8.3"
sha2 ={ git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0" }
benchmark_methods = { path = "methods" }
zkhash = { git = "https://github.com/HorizenLabs/poseidon2.git"}
ark-ff = "0.4.2"
hex = "0.4.3"
ark-serialize = "0.4"
risc0-core = { path = "../external/risc0/risc0/core" }
