[package]
name = "composition"
version = "0.1.0"
edition = "2021"

[dependencies]
composition-methods = { path = "methods" }
inner_proof = { path = "../inner_proof" }
risc0-zkvm = { path = "../external/risc0/risc0/zkvm" }
serde = "1.0"

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]
prove = ["risc0-zkvm/prove"]
