[package]
name = "inner_proof"
version = "0.1.0"
edition = "2021"

[dependencies]
inner_proof-methods = { path = "methods" }
risc0-zkvm = { path = "../external/risc0/risc0/zkvm" }
serde = "1.0"
rand = "0.8.3"


[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]
prove = ["risc0-zkvm/prove"]
