[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "guest"
path = "./src/lib.rs"

[features]
guest = []

[dependencies]
jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt", rev = "4805d038f7b6e7ca5e7ef64aefa62213aecac01a", features = ["guest-std"]}
sha2 = { version = "0.10.8", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
blake3 = { version = "1.5.4", default-features = false }
blake2 = { version = "0.10.6", default-features = false }
risc0-zkp = { version = "1.0.5", default-features = false }
risc0-core = { version = "=0.18.0", default-features = false }