[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "0.19.0" }
serde = "1.0"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "sha256_benchmarks"
harness = false

[[bin]]
name = "host"
path = "src/lib.rs"