[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "0.19.0" }
serde = "1.0"
rand = "0.8.5"
clap = {version = "4.4.8", features = [ "derive" ]}

[dev-dependencies]
criterion = {version ="0.5.1", default-features = false}

[[bench]]
name = "bench_main"
harness = false
