[package]
name = "method"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { path = "../../../external/risc0/risc0/zkvm", default-features = false,features = ["std"] }
sha3 = "0.10.8"
sha2 ={ git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0" }
risc0-zkp = {path = "../../../external/risc0/risc0/zkp"}
blake3 = "1.5.0"
zkhash = { git = "https://github.com/HorizenLabs/poseidon2.git"}
ark-serialize = "0.4"
ark-ff = "0.4.2"
risc0-core = {path = "../../../external/risc0/risc0/core"}
lazy_static = "1.4"
# risc0-zkp-core = "0.10.0"
rand = "0.8.5"